cursive-bootstrap/tests/ui/E-CON/E-CON-0093.cursive
// RUN: compile-fail
// DIAG: E-CON-0093
// SPEC: 8.9
// DESC: defer statement inside speculative block

record Counter {
    var value: i32
}

procedure defer_in_speculative(c: shared Counter) -> () {
    # speculative write c {
        defer {  //~ ERROR E-CON-0093: defer in speculative block
            c.value = 0
        }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
